# global-and-local-chat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
images/: icon.kra
src/endstone_global_and_local_chat/: __init__.py  plugin.py
