[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-global-and-local-chat"
version = "1.1.0"
description = "Implements both global and local chat systems"
authors = [
    {name = "niko-at-chalupa"},
    {name = "nikitalegend"}
]
dependencies = [
    "endstone",
    "ruamel.yaml",
]

[project.entry-points."endstone"]
global_and_local_chat = "endstone_global_and_local_chat:GlobalAndLocalChat"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_global_and_local_chat"]